fix(annotator): eliminate caret jumps and whitespace stripping by removing forced document saves